--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
         "dev": "nodemon ./bin/www"
     },
     "dependencies": {
+        "axios": "^1.6.1",
+        "bcryptjs": "^2.4.3",
         "cookie-parser": "~1.4.4",
+        "crypto": "^1.0.1",
         "debug": "~2.6.9",
         "dotenv": "^16.3.1",
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
         "jade": "~1.11.0",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.0",
-        "morgan": "~1.9.1"
+        "morgan": "~1.9.1",
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.7",
+        "paypal-rest-sdk": "^1.8.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
